--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -11,20 +11,13 @@
 	"workspaceFolder": "/pintos",
 	// Set *default* container specific settings.json values on container create.
 	"settings": {
-		"terminal.integrated.profiles.linux": {
-			"zsh (login)": {
-				"path": "zsh",
-				"args": [
-					"-l"
-				]
-			}
-		}
+		"terminal.integrated.shell.linux": "/bin/bash"
 	},
 	// Add the IDs of extensions you want installed when the container is created.
 	"extensions": [
 		"ms-vscode.cpptools",
 		"xaver.clang-format"
-	]
+	],
 	// Use 'forwardPorts' to make a list of ports inside the container available locally.
 	// "forwardPorts": [],
 	// Use 'postCreateCommand' to run commands after the container is created.
